syntax="proto3";

option go_package="github.com/Nutan-Kum12/GRPCOMS/services/common/genproto/orders";

package orders; 
service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}
message Order{
    int32 orderID = 1;
    int32 CustomerID = 2;
    int32 ProductID = 3;
    int32 Quantity = 4;
}
message CreateOrderRequest {    
    int32 customerID = 1;
    int32 productID = 2;
    int32 quantity = 3; 
}
message CreateOrderResponse {
    string status = 1;
}
message GetOrderRequest {
    int32 customerID = 1;
}
message GetOrderResponse {
    repeated Order orders = 1;
}   